[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/battle/ui/BattleUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/battle/BattleScene.gd" type="Script" id=2]

[node name="BattleScene" type="Node"]
script = ExtResource( 2 )

[node name="BattleUI" parent="." instance=ExtResource( 1 )]

[connection signal="action_attack_target" from="BattleUI" to="." method="_on_ui_action_attack_target"]
[connection signal="action_deploy_left" from="BattleUI" to="." method="_on_ui_action_deploy_left"]
[connection signal="action_deploy_right" from="BattleUI" to="." method="_on_ui_action_deploy_right"]
